--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="container">
+        
         <h1>Stephen Mwanza</h1>
+        <img src="css/images/winepress.png">
 
 
 
