--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Stephen Mwanza</title>
+    <link rel="stylesheet" href="text/css" type="styles.css">
 </head>
 <body>
     <div id="container">
-        
+        <div id="layout">
+           <nav>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="about.html" target="_blank">About Me</a></li>
+           </nav>
+            
+
+        </div>
         <h1>Stephen Mwanza</h1>
         <img src="css/images/winepress.png">
 
