--- a/about.html
+++ b/about.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>about me</title>
-    <link rel="stylesheet" href="text/css" type="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <div id="container">
             <nav>
+                <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" target="_blank">About Me</a></li>
+                </ul>
                 </nav>
 
                 <h1>About Me</h1>
