--- a/index.html
+++ b/index.html
@@ -5,20 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Stephen Mwanza</title>
-    <link rel="stylesheet" href="text/css" type="styles.css">
+   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <div id="container">
         <div id="layout">
            <nav>
+               <ul>
                <li><a href="index.html">Home</a></li>
                <li><a href="about.html" target="_blank">About Me</a></li>
-           </nav>
-            
+            </ul>
 
+           </nav>
         </div>
+        <div id="index">
         <h1>Stephen Mwanza</h1>
         <img src="css/images/winepress.png">
+    </div>
+    <aside>
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="https://github.com/Steve-design/my-first-webpage.git">My first webpage</a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li> 
+        </ul>
+    </aside>
+
+    
+
+
 
 
 
