--- a/about.html
+++ b/about.html
@@ -11,12 +11,16 @@
     <div id="container">
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" target="_blank">About Me</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html" target="_blank">ABOUT</a></li>
                 </ul>
                 </nav>
 
                 <h1>About Me</h1>
+                <div>
+                    <h3>BACKGROUND INFORMATION</h3>
+                    <h4>EDUCATION</h4>
+                </div>
 
 
 
