--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div id="layout">
            <nav>
                <ul>
-               <li><a href="index.html">Home</a></li>
-               <li><a href="about.html" target="_blank">About Me</a></li>
+               <li><a href="index.html">HOME</a></li>
+               <li><a href="about.html" target="_blank">ABOUT</a></li>
             </ul>
 
            </nav>
@@ -26,13 +26,14 @@
         <h2>Projects</h2>
         <ul>
             <li><a href="https://github.com/Steve-design/my-first-webpage.git">My first webpage</a></li>
-            <p>Contains all my first three practices, including my favorite things and my pet animal.(Built through HTML and CSS)</p>
+            <p>Contains all my first three practices, including my favorite things and my pet animal. (Built through HTML and CSS)</p>
             <li><a href="https://github.com/Steve-design/resort-project.git">Resort Project</a></li>
             <p>This page contains the website of Rich Island Resort. (Built through HTML and CSS languages)</p>
             <li><a href="https://github.com/Steve-design/Hello-world.git">Hello World</a></li>
-            <p>This is my very first website building practice page.(Built through HTML)</p> 
+            <p>This is my very first website building practice page. (Built through HTML)</p> 
         </ul>
     </aside>
+    
 
     
 
