--- a/about.html
+++ b/about.html
@@ -12,11 +12,12 @@
             <nav>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
+                    <li><a href="projects.html" target="_blank">PROJECTS</a></li>
                     <li><a href="about.html" target="_blank">ABOUT</a></li>
                 </ul>
                 </nav>
 
-                <h1>About Me</h1>
+                <h1>ABOUT</h1>
                 <div>
                     <h3>BACKGROUND INFORMATION</h3>
                     <h4>EDUCATION</h4>
