--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
            <nav>
                <ul>
                <li><a href="index.html">HOME</a></li>
+               <li><a href="projects.html" target="_blank">PROJECTS</a></li>
                <li><a href="about.html" target="_blank">ABOUT</a></li>
             </ul>
 
