add unordered list to index.html file

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>projects</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
@@ -16,5 +16,17 @@
                 <li><a href="about.html" target="_blank">ABOUT</a></li>
              </ul>
    </div> 
+   <aside>
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="https://github.com/Steve-design/my-first-webpage.git">My first webpage</a></li>
+            <p>Contains all my first three practices, including my favorite things and my pet animal. (Built through HTML and CSS)</p>
+            <li><a href="https://github.com/Steve-design/resort-project.git">Resort Project</a></li>
+            <p>This page contains the website of Rich Island Resort. (Built through HTML and CSS languages)</p>
+            <li><a href="https://github.com/Steve-design/Hello-world.git">Hello World</a></li>
+            <p>This is my very first website building practice page. (Built through HTML)</p> 
+        </ul>
+    </aside>
+    
 </body>
 </html>
