--- a/index.html
+++ b/index.html
@@ -23,18 +23,16 @@
         <h1>Stephen Mwanza</h1>
         <img src="css/images/winepress.png">
     </div>
-    <aside>
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="https://github.com/Steve-design/my-first-webpage.git">My first webpage</a></li>
-            <p>Contains all my first three practices, including my favorite things and my pet animal. (Built through HTML and CSS)</p>
-            <li><a href="https://github.com/Steve-design/resort-project.git">Resort Project</a></li>
-            <p>This page contains the website of Rich Island Resort. (Built through HTML and CSS languages)</p>
-            <li><a href="https://github.com/Steve-design/Hello-world.git">Hello World</a></li>
-            <p>This is my very first website building practice page. (Built through HTML)</p> 
-        </ul>
-    </aside>
-    
+   <aside id="me">
+       <ul>
+           <li>Great task manager</li>
+           <li>A good team player</li>
+           <li>Adaptable</li>
+           <li>Time manager</li>
+           <li>High level communication skills</li>
+           <li>Great grit</li>
+       </ul>
+   </aside>
 
     
 
