add heading 1 on projects.html file

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,10 @@
             <p>This is my very first website building practice page. (Built through HTML)</p> 
         </ul>
     </aside>
+    <div id="backround">
+        <h1>PROJECTS</h1>
+
+    </div>
     
 </body>
 </html>
