add images folder

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="index">
         <h1>Stephen Mwanza</h1>
-        <img src="css/images/winepress.png">
+        <img src="landing-page/images/winepress.png">
     </div>
    <aside id="me">
        <ul>
