--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,11 @@
                 <li><a href="about.html" target="_blank">ABOUT</a></li>
              </ul>
    </div> 
+   <div id="project">
+        <h1>PROJECTS</h1>
+
+    </div>
+    <div>
    <aside>
         <h2>Projects</h2>
         <ul>
@@ -27,10 +32,9 @@
             <p>This is my very first website building practice page. (Built through HTML)</p> 
         </ul>
     </aside>
-    <div id="backround">
-        <h1>PROJECTS</h1>
+</div>
 
-    </div>
+   
     
 </body>
 </html>
