--- a/projects.html
+++ b/projects.html
@@ -16,12 +16,10 @@
                 <li><a href="about.html" target="_blank">ABOUT</a></li>
              </ul>
    </div> 
-   <div id="project">
-        <h1>PROJECTS</h1>
+  <div id="project">
 
-    </div>
-    <div>
-   <aside>
+  </div>
+   <aside class="list">
         <h2>Projects</h2>
         <ul>
             <li><a href="https://github.com/Steve-design/my-first-webpage.git">My first webpage</a></li>
@@ -32,6 +30,7 @@
             <p>This is my very first website building practice page. (Built through HTML)</p> 
         </ul>
     </aside>
+    </div>
 </div>
 
    
