--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-    <div id="container">
+        <div id="container">
             <nav>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
@@ -16,7 +16,7 @@
                     <li><a href="about.html" target="_blank">ABOUT</a></li>
                 </ul>
                 </nav>
-
+                <div id="about">
                 <h1>ABOUT</h1>
                 <div>
                     <h3>BACKGROUND INFORMATION</h3>
