--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+    <div id ="container"></div>
+
    <div id="layout">
         <nav>
                 <ul>
@@ -16,6 +18,7 @@
                 <li><a href="about.html" target="_blank">ABOUT</a></li>
              </ul>
    </div> 
+   
   <div id="project">
 
   </div>
@@ -31,9 +34,7 @@
         </ul>
     </aside>
     </div>
-</div>
-
-   
+</div> 
     
 </body>
 </html>
