--- a/about.html
+++ b/about.html
@@ -16,11 +16,12 @@
                     <li><a href="about.html" target="_blank">ABOUT</a></li>
                 </ul>
                 </nav>
-                <div id="about">
-                <h1>ABOUT</h1>
+                <div id="about"> 
+                <h1>ABOUT ME</h1>
                 <div>
-                    <h3>BACKGROUND INFORMATION</h3>
-                    <h4>EDUCATION</h4>
+                    <h3>Education</h3>
+                    
+                    
                 </div>
 
 
