--- a/about.html
+++ b/about.html
@@ -18,10 +18,14 @@
                 </nav>
                 <div id="about"> 
                 <h1>ABOUT ME</h1>
-                <div>
+                <div id="education">
                     <h3>Education</h3>
-                    
-                    
+                    <ul>
+                    <li>2003-2010: Pilot Educational Centre</li>
+                    <li>2011-2014: Ruaraka High School</li>
+                    <li>2014-2016: Pan Africa Christian University</li>
+                    <li>2016-2018: Technical University of Kenya</li>
+                    </ul>
                 </div>
 
 
