add paragraph to about.html and style it and make all changes to the unordered lists

--- a/about.html
+++ b/about.html
@@ -27,6 +27,23 @@
                     <li>2016-2018: Technical University of Kenya</li>
                     </ul>
                 </div>
+                <div id="job">
+                    <h3>Job Experience</h3>
+                    <li>2015-2016: Part time job as a library attendant at PAC.</li>
+                    <li>2017-2018: Leadership Consultancy with Dry Consultants</li>
+                    <li>2018-2019: Tech Consultant</li>
+
+                </div>
+                
+                <div id="hobbies">
+                    <h3>Current hobbies</h3>
+                    <ul>
+                        <li>Travelling to new places</li>
+                        <li>Playing tech games</li>
+                        <li>Watching new tech inventions</li>
+                    </ul>
+
+                </div>
 
 
 
