add all changes

--- a/about.html
+++ b/about.html
@@ -34,7 +34,11 @@
                     <li>2018-2019: Tech Consultant</li>
 
                 </div>
-                
+                <div id="tech">
+                    <p>Programming teaches one a systematic way of thinking that will help you in your new job. It is also an interesting practice that opens doors for great inventions and innovations. That is why I took Programming class. </p>
+
+                </div>
+
                 <div id="hobbies">
                     <h3>Current hobbies</h3>
                     <ul>
