add strong tags and em tags on the paragraph in the about.html file

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
                 </div>
                 <div id="tech">
-                    <p>Programming teaches one a systematic way of thinking that will help you in your new job. It is also an interesting practice that opens doors for great inventions and innovations. That is why I took Programming class. </p>
+                    <p><strong>Programming</strong> teaches one a systematic way of thinking that will help you in your new job. It is also an interesting practice that opens doors for great <em>inventions and innovations</em>. That is why I took Programming class. </p>
 
                 </div>
 
